--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -59,13 +59,14 @@ SOValue=SO Value
 SOItem=SO Item
 AppType=App Type
 OrderType=Order Type
-UserAssignment=UserAssignment
+UserAssignment=User Assignment
 SOEnterDate=SO Enter Date
 OrderStatus=Order Status
 StatusDate=Status Date
 OrderDate=Order Date
 ClarifyStatus=Clarify Status
 CustNumber=Customer Number
+CustName=Customer Name
 ShipDate=Shipping Date
 Vtweg=Distribution Channel
 Select=Select
