--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -53,6 +53,7 @@ objectTitle=<POHeaderSet>
 CompanyCodeLabel=CompanyCode
 ETOMyInbox=ETO-MyInbox
 
+errorText=Error
 #~~~~~~~~~~~~~~~ Smart table
 SONumber=SO Number
 SOValue=SO Value
