--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -71,4 +71,5 @@ CustName=Customer Name
 ShipDate=Shipping Date
 Vtweg=Distribution Channel
 Select=Select
+GroupName=Group Name
 NoData=No Data Found, Please try other filters
