--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -72,4 +72,5 @@ ShipDate=Shipping Date
 Vtweg=Distribution Channel
 Select=Select
 GroupName=Group Name
+ItemStatus=Item Status
 NoData=No Data Found, Please try other filters
